# rust_ihome

./: .env  Cargo.toml
src/: main.rs
src/entity/: ih_areas.rs  ih_facilities.rs  ih_house_facilities.rs  ih_house_images.rs  ih_houses.rs  ih_orders.rs  ih_users.rs  mod.rs  prelude.rs
src/handler/: houses.rs  init_db.rs  mod.rs  orders.rs  users.rs
src/utils/: constants.rs  jwt.rs  mod.rs  response_codes.rs
static/db_scripts/: ih_areas.py  ih_facilities.py
static/html/: booking.html  detail.html  index.html  lorders.html  my.html  myhouse.html  newhouse.html  orders.html  payresult.html  profile.html  register.html  search.html
static/js/ihome/: auth.js  booking.js  detail.js  index.js  login.js  lorders.js  my.js  myhouse.js  newhouse.js  orders.js  payresult.js  profile.js  register.js  search.js
