[package]
name = "ihome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.4", features = ["headers", "multipart"] }
hyper = { version = "0.14.15", features = ["full"] }
tokio = { version = "1.14.0", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
sea-orm = { version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.19"
headers = "0.3"
jsonwebtoken = "7"
once_cell = "1.8"
redis = { version ="0.21.5", features=["tokio-comp"]}